--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/material": "^6.4.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "@mui/system": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.0.6",
     "preact": "^10.25.3",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10",
     "sweetalert2-react-content": "^5.1.0"
   },
