--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
     "@mui/system": "^6.4.0",
+    "@mui/x-data-grid": "^7.25.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.3.1",
     "preact": "^10.25.3",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
