--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^7.25.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.3.1",
     "preact": "^10.25.3",
     "react-icons": "^5.4.0",
